relaxng-gen/tests/snapshots/build__test-empty-in-choice.snap
---
source: relaxng-gen/tests/build.rs
expression: combined
---
--- device/device_choice/type.rs ---
use crate::{Error, Result, ToXml};
use std::str::FromStr;
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum Type {
    File,
    None,
}
impl ToXml for Type {
    type Builder = TypeBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{BytesEnd, BytesStart, BytesText, Event};
        match self {
            Self::File => {
                writer.write_event(Event::Text(BytesText::new("file")))?;
            }
            Self::None => {
                writer.write_event(Event::Text(BytesText::new("none")))?;
            }
        }
        Ok(())
    }
}
impl core::fmt::Display for Type {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
impl Type {
    pub fn from_xml(
        node: &roxmltree::Node,
        from_child: &mut Option<roxmltree::Node>,
    ) -> Result<Type> {
        let mut builder = Type::builder();
        loop {
            let Some(child) = from_child else {
                break;
            };
            match child.node_type() {
                roxmltree::NodeType::Element => {
                    match child.tag_name().name() {
                        _ => {}
                    }
                }
                roxmltree::NodeType::Text => {
                    if let Some(val) = child.text() {
                        match val {
                            "file" => {
                                builder.file()?;
                            }
                            "none" => {
                                builder.none()?;
                            }
                            _ => {}
                        }
                    }
                }
                _ => {}
            }
            *from_child = child.next_sibling();
            if let Ok(build) = builder.build() {
                return Ok(build);
            }
        }
        builder.build()
    }
    pub fn to_xml_attr(
        &self,
        __start: &mut quick_xml::events::BytesStart<'_>,
    ) -> Result<()> {
        match self {
            Self::File => {}
            Self::None => {}
        }
        Ok(())
    }
    pub fn is_empty(&self) -> bool {
        self.to_string().is_empty()
    }
}
impl FromStr for Type {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        let mut builder = Self::builder();
        match s {
            "file" => {
                builder.file()?;
            }
            "none" => {
                builder.none()?;
            }
            other => {
                dbg!(other);
            }
        }
        builder.build()
    }
}
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct TypeBuilder {
    file: Option<()>,
    none: Option<()>,
}
impl TypeBuilder {
    pub fn file(&mut self) -> Result<&mut Self> {
        self.file = Some(());
        Ok(self)
    }
    pub fn none(&mut self) -> Result<&mut Self> {
        self.none = Some(());
        Ok(self)
    }
    pub fn build(&self) -> Result<Type> {
        if self.file.is_some() {
            return Ok(Type::File);
        }
        if self.none.is_some() {
            return Ok(Type::None);
        }
        Err(Error::BuilderVariant("Type"))
    }
}

--- device/device_choice.rs ---
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod r#type;
use r#type::Type;
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum DeviceChoice {
    #[doc = "/ref[@name='device']/element[@name='device'][1]/choice[1]/group[1]"]
    Variant0 { path: String },
    #[doc = "/ref[@name='device']/element[@name='device'][1]/choice[1]/group[2]"]
    Variant1 {},
}
impl ToXml for DeviceChoice {
    type Builder = DeviceChoiceBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{BytesEnd, BytesStart, BytesText, Event};
        match self {
            Self::Variant0 { path } => {}
            Self::Variant1 {} => {}
        }
        Ok(())
    }
}
impl core::fmt::Display for DeviceChoice {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
impl DeviceChoice {
    pub fn from_xml(
        node: &roxmltree::Node,
        from_child: &mut Option<roxmltree::Node>,
    ) -> Result<DeviceChoice> {
        let mut builder = DeviceChoice::builder();
        if let Some(val) = node.attribute("type") {
            builder.r#type(Type::from_str(val)?)?;
        }
        if let Some(val) = node.attribute("path") {
            builder.path(val)?;
        }
        loop {
            let Some(child) = from_child else {
                break;
            };
            match child.node_type() {
                roxmltree::NodeType::Element => {
                    match child.tag_name().name() {
                        _ => {}
                    }
                }
                roxmltree::NodeType::Text => {
                    if let Some(val) = child.text() {
                        match val {
                            _ => {}
                        }
                    }
                }
                _ => {}
            }
            *from_child = child.next_sibling();
            if let Ok(build) = builder.build() {
                return Ok(build);
            }
        }
        builder.build()
    }
    pub fn to_xml_attr(
        &self,
        __start: &mut quick_xml::events::BytesStart<'_>,
    ) -> Result<()> {
        match self {
            Self::Variant0 { path } => {
                __start
                    .push_attribute((
                        &b"type"[..],
                        quick_xml::escape::escape("file").as_bytes(),
                    ));
                let elem = path;
                {
                    let elem = path;
                    __start
                        .push_attribute((
                            &b"path"[..],
                            quick_xml::escape::escape(&elem.to_string()).as_bytes(),
                        ));
                }
            }
            Self::Variant1 {} => {
                __start
                    .push_attribute((
                        &b"type"[..],
                        quick_xml::escape::escape("none").as_bytes(),
                    ));
            }
        }
        Ok(())
    }
    pub fn is_empty(&self) -> bool {
        self.to_string().is_empty()
    }
}
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct DeviceChoiceBuilder {
    r#type: Option<Type>,
    path: Option<String>,
    empty: Option<()>,
}
impl DeviceChoiceBuilder {
    pub fn r#type<T>(&mut self, r#type: T) -> Result<&mut Self>
    where
        T: TryInto<Type>,
        Error: From<<T as TryInto<Type>>::Error>,
    {
        self.r#type = Some(r#type.try_into()?);
        Ok(self)
    }
    pub fn path<T>(&mut self, path: T) -> Result<&mut Self>
    where
        T: TryInto<String>,
        Error: From<<T as TryInto<String>>::Error>,
    {
        self.path = Some(path.try_into()?);
        Ok(self)
    }
    pub fn empty(&mut self) -> Result<&mut Self> {
        self.empty = Some(());
        Ok(self)
    }
    pub fn build(&self) -> Result<DeviceChoice> {
        if matches!(self.r#type, Some(Type::File)) && self.path.is_some() {
            return Ok(DeviceChoice::Variant0 {
                path: Clone::clone(self.path.as_ref().unwrap()).into(),
            });
        }
        if matches!(self.r#type, Some(Type::None)) && self.empty.is_some() {
            return Ok(DeviceChoice::Variant1 {});
        }
        Err(Error::BuilderVariant("DeviceChoice"))
    }
}

--- device.rs ---
//!`device` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod device_choice;
use device_choice::DeviceChoice;
///`<device/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Device {
    pub device_choice: DeviceChoice,
}
impl ToXml for Device {
    type Builder = DeviceBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut start = BytesStart::new("device");
        {
            let elem = &self.device_choice;
            elem.to_xml_attr(&mut start)?;
        }
        let empty = {
            true
                && ({
                    let elem = &self.device_choice;
                    elem.is_empty()
                })
        };
        if empty {
            writer.write_event(Event::Empty(start))?;
        } else {
            writer.write_event(Event::Start(start))?;
            {
                let elem = &self.device_choice;
                elem.to_xml(writer)?;
            }
            writer.write_event(Event::End(BytesEnd::new("device")))?;
        }
        Ok(())
    }
}
impl Device {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                _ => {}
            }
        }
        let child = &mut node.first_child();
        builder.device_choice(DeviceChoice::from_xml(node, child)?)?;
        builder.build()
    }
}
impl core::fmt::Display for Device {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<device/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct DeviceBuilder {
    pub device_choice: Option<DeviceChoice>,
}
impl DeviceBuilder {
    pub fn device_choice<T>(&mut self, device_choice: T) -> Result<&mut Self>
    where
        T: TryInto<DeviceChoice>,
        Error: From<<T as TryInto<DeviceChoice>>::Error>,
    {
        self.device_choice = Some(device_choice.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`Device`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Device> {
        let device_choice = Clone::clone(
            self
                .device_choice
                .as_ref()
                .ok_or(Error::BuilderMissingField("device", "device_choice"))?,
        );
        Ok(Device { device_choice })
    }
}

--- lib.rs ---
#![doc = concat!(
    "Generated from ",
    "'/home/elmarco/src/relaxng-rust/relaxng-gen/tests/fixtures/empty-in-choice.rng'",
    " schema."
)]
#![allow(dead_code)]
#![allow(unused_mut)]
#![allow(unused_variables)]
#![allow(unused_imports)]
use thiserror::Error;
pub mod device;
pub use device::*;
/// The error type used by this crate.
#[derive(Error, Debug)]
pub enum Error {
    #[error("IO error: {0}")]
    Io(#[from] std::io::Error),
    #[error("From UTF-8 error: {0}")]
    FromUtf8Error(#[from] std::string::FromUtf8Error),
    #[error("{0} builder is missing mandatory field: {1}")]
    BuilderMissingField(&'static str, &'static str),
    #[error("{0} builder cannot build a variant")]
    BuilderVariant(&'static str),
    #[error("String too short, expected at least {0} characters, got {1}")]
    TooShort(usize, usize),
    #[error("String too long, expected at most {0} characters, got {1}")]
    TooLong(usize, usize),
    #[error("String '{0}' does not match pattern '{1}'")]
    PatternMismatch(&'static str, String),
    #[error("Failed to compile regex: {0}")]
    RegexError(#[from] regex::Error),
    #[error("Failed to parse '{0}': {1}")]
    ParseError(
        &'static str,
        #[source]
        Box<dyn std::error::Error + Send + Sync + 'static>,
    ),
}
impl From<std::convert::Infallible> for Error {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible error should not occur")
    }
}
/// Helper trait for this crate XML types.
pub trait ToXml {
    /// The associated builder type.
    type Builder: Default;
    /// Creates a new builder for this type.
    fn builder() -> Self::Builder {
        Self::Builder::default()
    }
    /// Writes Events to a XML writer.
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write;
}
#[doc(hidden)]
pub trait RegexPattern {
    const REGEX: &'static str;
}
#[doc(hidden)]
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub struct NoPattern;
impl RegexPattern for NoPattern {
    const REGEX: &'static str = "";
}
/// A string type with length constraints and optional runtime regex validation.
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct ConstrainedString<
    const MIN_LEN: usize,
    const MAX_LEN: usize,
    P: RegexPattern = NoPattern,
> {
    value: String,
    _phantom: std::marker::PhantomData<P>,
}
impl<
    const MIN: usize,
    const MAX: usize,
    P: RegexPattern,
> ConstrainedString<MIN, MAX, P> {
    pub const NO_MIN_CONSTRAINT: usize = 0;
    pub const NO_MAX_CONSTRAINT: usize = usize::MAX;
    pub fn try_new(value: impl Into<String>) -> Result<Self> {
        let s = value.into();
        Self::validate(&s)?;
        Ok(Self {
            value: s,
            _phantom: std::marker::PhantomData,
        })
    }
    fn validate(s: &str) -> Result<()> {
        fn get_compiled_regex(pattern: &'static str) -> Result<regex::Regex> {
            /// Registry for compiled regex patterns
            static REGEX_REGISTRY: std::sync::OnceLock<
                std::sync::Mutex<std::collections::HashMap<&'static str, regex::Regex>>,
            > = std::sync::OnceLock::new();
            if pattern.is_empty() {
                return Ok(regex::Regex::new(".*").unwrap());
            }
            let registry = REGEX_REGISTRY
                .get_or_init(|| std::sync::Mutex::new(std::collections::HashMap::new()));
            let mut map = registry.lock().unwrap();
            if let Some(regex) = map.get(pattern) {
                return Ok(regex.clone());
            }
            match regex::Regex::new(pattern) {
                Ok(regex) => {
                    let result = regex.clone();
                    map.insert(pattern, regex);
                    Ok(result)
                }
                Err(e) => Err(Error::RegexError(e)),
            }
        }
        if MIN > Self::NO_MIN_CONSTRAINT && s.len() < MIN {
            return Err(Error::TooShort(MIN, s.len()));
        }
        if MAX < Self::NO_MAX_CONSTRAINT && s.len() > MAX {
            return Err(Error::TooLong(MAX, s.len()));
        }
        if !P::REGEX.is_empty() {
            let regex = get_compiled_regex(P::REGEX)?;
            if !regex.is_match(s) {
                return Err(Error::PatternMismatch(P::REGEX, s.to_string()));
            }
        }
        Ok(())
    }
    /// Returns the string as a `&str`.
    #[must_use]
    pub fn as_str(&self) -> &str {
        &self.value
    }
    /// Converts the constrained string into a `String`, consuming it.
    #[must_use]
    pub fn into_string(self) -> String {
        self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::ops::Deref
for ConstrainedString<MIN, MAX, P> {
    type Target = str;
    fn deref(&self) -> &Self::Target {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::fmt::Display
for ConstrainedString<MIN, MAX, P> {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.value)
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> AsRef<str>
for ConstrainedString<MIN, MAX, P> {
    fn as_ref(&self) -> &str {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::str::FromStr
for ConstrainedString<MIN, MAX, P> {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        Self::try_new(s)
    }
}
/// A specialized Result type where the error is hard-wired to [`enum@Error`].
pub type Result<T, E = Error> = std::result::Result<T, E>;

--- main.rs ---
use std::path::Path;
use std::{env::args, fs};
fn main() {
    let path = args().nth(1).expect("No XML file path provided");
    let xml_path = Path::new(&path);
    let xml = fs::read_to_string(xml_path).expect("Failed to read test XML file");
    let xml = roxmltree::Document::parse(&xml).expect("Failed to parse XML");
    let root = xml.root().first_child().expect("No root element found");
    let res = test_empty_in_choice::Device::from_xml(&root).unwrap();
    let res = res.to_string();
    println!("{}", res);
}
